[gd_scene load_steps=3 format=3 uid="uid://bh7wvkffdos0o"]

[ext_resource type="Script" path="res://Prog88a.gd" id="1_bj8lc"]
[ext_resource type="LabelSettings" uid="uid://cwkbjts086b8f" path="res://main.tres" id="2_vjwp2"]

[node name="Prog88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bj8lc")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 108.0
offset_top = 516.0
offset_right = 326.0
offset_bottom = 588.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 513.0
offset_right = 671.0
offset_bottom = 585.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 814.0
offset_top = 506.0
offset_right = 1032.0
offset_bottom = 578.0
text = "Exit"

[node name="txtNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 162.0
offset_top = 128.0
offset_right = 411.0
offset_bottom = 188.0

[node name="txtNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 715.0
offset_top = 126.0
offset_right = 964.0
offset_bottom = 186.0

[node name="lblOutput" type="Label" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 222.0
offset_right = 1037.0
offset_bottom = 472.0
label_settings = ExtResource("2_vjwp2")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
